# spring2023-isaacPetersonKSU

./: README.md  initial_writeup.docx  writeup.txt
hardware/mechanical/cap connector/: cap_clip.FCStd  cap_clip.FCStd1
hardware/mechanical/drill guide/: unibody_drill_guide-Body.stl  unibody_drill_guide.FCStd
hardware/mechanical/top bit/: prototype_0.0.0.stl  top_bit.FCStd  top_bit.FCStd1
hardware/mechanical/unibody/: model - Copy.FCStd  model - Copy.FCStd1  model.FCStd  model.FCStd.260999e7-9ddc-4ab1-9bea-ab7447d1d3bf  model.FCStd1  unibody_ver_0.0.0.stl
hardware/meche/prototype_0/: thundertoad_4.FCStd1
hardware/meche/prototype_0/hole_drilling_guide/: guide.FCStd  guide.FCStd1
hardware/meche/prototype_1/drill guide/: cap_clip_drill_guide.FCStd  cap_clip_drill_guide.FCStd1
hardware/meche/prototype_1/top bit/: FLOW_BOX_1.0.stl  flow_controler.FCStd
hardware/prototype_0/: cap_clip_first_print.FCStd
hardware/prototype_0/hole_drilling_guide/: guide-Body.stl
hardware/prototype_1/cap connector/: cap_clip.FCStd  cap_clip.FCStd1
hardware/prototype_1/drill guide/: cap_clip_drill_guide.stl
hardware/prototype_1/top bit/: flow_controler.FCStd1
src/: CMakeLists.txt  main.c
